fixwed title spacing mobile

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
 
 @media (max-width: 768px) {
     .card .text {
-        font-size: 30px;
+        font-size: 10px;
         /* margin: 10px */
     }
 }
@@ -55,15 +55,16 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    position: sticky;
     /* padding-bottom: 20px; */
+    margin-bottom: 100px;
+
 }
 
 h1 {
     font-family: 'Wagon';
     font-size: 50px;
     color: #800020;
-    /* margin-right: 20px; */
-    margin-bottom: 50px;
 }
 
 @media (max-width: 768px) {
@@ -71,14 +72,18 @@ h1 {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        margin-bottom: 10px;
     }
     h1 {
         font-size: 30px;
     }
+    /* .dm{
+        margin-bottom:
+    } */
 
-    .container{
+    /* .container{
         margin-top: 150px;
-    }
+    } */
     /* .heart {
         margin: 0px;
     } */
@@ -92,7 +97,7 @@ h1 {
 @media (min-width: 769px) {
     .heart {
         margin: 20px;
-        margin-bottom: 50px;
+        /* margin-bottom: 50px; */
     }
     
 }
